使用 Colab 创建而成

--- a/handin1_(1).ipynb
+++ b/handin1_(1).ipynb
@@ -526,7 +526,94 @@
         "\n",
         "__Solution:__\n",
         "\n",
-        "_Fill in your solution here!_"
+        "From Task 3 the dual (concave maximization) is\n",
+        "$$\n",
+        "\\max_{\\mu \\in \\mathbb{R}^n} D(\\mu) := -f^*(-\\mu) - \\iota_S^*(\\mu) = -\\frac{1}{2}(\\mu + q)^\\top Q^{-1}(\\mu + q) - \\sigma_S(\\mu),\n",
+        "$$\n",
+        "where $\\sigma_S = \\iota_S^*$ is the support function of the box $S$.\n",
+        "\n",
+        "For a concave maximization, Fermat's rule says\n",
+        "$$\n",
+        "0 \\in \\partial(-D)(\\mu^\\star).\n",
+        "$$\n",
+        "\n",
+        "Compute $\\partial(-D)$:\n",
+        "$$\n",
+        "-D(\\mu) = f^*(-\\mu) + \\sigma_S(\\mu), \\qquad \\nabla f^*(y) = Q^{-1}(y - q).\n",
+        "$$\n",
+        "\n",
+        "By the chain rule,\n",
+        "$$\n",
+        "\\nabla_\\mu f^*(-\\mu) = -\\nabla f^*(-\\mu) = -Q^{-1}(-\\mu - q) = Q^{-1}(\\mu + q).\n",
+        "$$\n",
+        "\n",
+        "Thus,\n",
+        "$$\n",
+        "0 \\in Q^{-1}(\\mu^\\star + q) + \\partial \\sigma_S(\\mu^\\star).\n",
+        "$$\n",
+        "\n",
+        "Define\n",
+        "$$\n",
+        "x^\\star := -Q^{-1}(\\mu^\\star + q) = \\nabla f^*(-\\mu^\\star).\n",
+        "$$\n",
+        "\n",
+        "Then\n",
+        "$$\n",
+        "-Q^{-1}(\\mu^\\star + q) \\in \\partial \\sigma_S(\\mu^\\star)\n",
+        "\\quad \\Longleftrightarrow \\quad\n",
+        "x^\\star \\in \\partial \\sigma_S(\\mu^\\star).\n",
+        "$$\n",
+        "\n",
+        "By the conjugacy/subgradient symmetry,\n",
+        "$$\n",
+        "x \\in \\partial g^*(\\mu) \\Longleftrightarrow \\mu \\in \\partial g(x),\n",
+        "$$\n",
+        "so with $g = \\iota_S$ and $g^* = \\sigma_S$, gives\n",
+        "$$\n",
+        "\\mu^\\star \\in \\partial \\iota_S(x^\\star) = N_S(x^\\star)\n",
+        "$$\n",
+        "\n",
+        "Consequences:\n",
+        "\n",
+        "$N_S(x^\\star) \\neq \\emptyset$ implies $x^\\star \\in S$ (primal feasibility).\n",
+        "\n",
+        "Coordinatewise normal-cone conditions (complementarity):\n",
+        "$$\n",
+        "\\left\\{\n",
+        "\\begin{aligned}\n",
+        "a_i < x_i^\\star < b_i &\\Rightarrow \\mu_i^\\star = 0, \\\\\n",
+        "x_i^\\star = a_i &\\Rightarrow \\mu_i^\\star \\leq 0, \\\\\n",
+        "x_i^\\star = b_i &\\Rightarrow \\mu_i^\\star \\geq 0.\n",
+        "\\end{aligned}\n",
+        "\\right.\n",
+        "$$\n",
+        "\n",
+        "Compute the primal gradient at $x^\\star$:\n",
+        "$$\n",
+        "\\nabla f(x^\\star) = Qx^\\star + q = Q\\left(-Q^{-1}(\\mu^\\star + q)\\right) + q = -(\\mu^\\star + q) + q = -\\mu^\\star.\n",
+        "$$\n",
+        "\n",
+        "Combine:\n",
+        "$$\n",
+        "0 \\in \\nabla f(x^\\star) + \\partial \\iota_S(x^\\star) = (-\\mu^\\star) + \\partial \\iota_S(x^\\star).\n",
+        "$$\n",
+        "\n",
+        "Since $\\mu^\\star \\in \\partial \\iota_S(x^\\star)$, the right-hand side contains $0$. This is exactly Fermat's rule for the primal problem\n",
+        "$$\n",
+        "\\min_x f(x) + \\iota_S(x).\n",
+        "$$\n",
+        "\n",
+        "Hence $x^\\star$ is optimal for the primal.  \n",
+        "Because $Q \\succ 0$ makes $f$ strongly convex and $\\iota_S$ is convex, the primal minimizer is unique; thus this $x^\\star$ is the primal solution.\n",
+        "\n",
+        "Given an optimal dual $\\mu^\\star$,\n",
+        "$$\n",
+        "x^\\star = -Q^{-1}(\\mu^\\star + q) \\quad \\text{and} \\quad \\mu^\\star \\in N_S(x^\\star) \\; \\text{(so } x^\\star \\in S\\text{)}.\n",
+        "$$\n",
+        "\n",
+        "Then $0 \\in \\nabla f(x^\\star) + \\partial \\iota_S(x^\\star)$, proving primal optimality.\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -553,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "zUFeTpf1v1zs"
       },
@@ -561,7 +648,7 @@
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline\n",
+        "#%matplotlib inline\n",
         "\n",
         "def quad(x,Q,q):\n",
         "    \"\"\"\n",
@@ -573,7 +660,10 @@
         "    :return: (1/2)x'Qx + q'x\n",
         "    \"\"\"\n",
         "    # Write your solution here\n",
-        "    return ...\n",
+        "    x = np.asarray(x)\n",
+        "    Q = np.asarray(Q)\n",
+        "    q = np.asarray(q)\n",
+        "    return 0.5 * x @ (Q @ x) + q @ x\n",
         "\n",
         "def quadconj(mu,Q,q):\n",
         "    \"\"\"\n",
@@ -585,8 +675,13 @@
         "    :param q: the vector in the quadratic function that corresponds to the linear part\n",
         "    :return: conjugate of (1/2)x'Qx + q'x, evaluated at mu\n",
         "    \"\"\"\n",
-        "    # Write your solution here\n",
-        "    return ...\n",
+        "    mu = np.asarray(mu)\n",
+        "    Q = np.asarray(Q)\n",
+        "    q = np.asarray(q)\n",
+        "    v = mu - q\n",
+        "    y = np.linalg.solve(Q, v)      # Q^{-1} v\n",
+        "    return 0.5 * v @ y\n",
+        "\n",
         "\n",
         "def box(x,a,b):\n",
         "    \"\"\"\n",
@@ -614,7 +709,11 @@
         "    :return: conjugate of the indicator function of the box contraint [a,b], evaluated at mu\n",
         "    \"\"\"\n",
         "    # Write your solution here\n",
-        "    return ...\n",
+        "    mu = np.asarray(mu)\n",
+        "    a = np.asarray(a)\n",
+        "    b = np.asarray(b)\n",
+        "    return np.sum(0.5*(a+b)*mu + 0.5*(b-a)*np.abs(mu))\n",
+        "\n",
         "\n",
         "def grad_quad(x,Q,q):\n",
         "    \"\"\"\n",
@@ -626,7 +725,10 @@
         "    :return: gradient of (1/2)x'Qx + q'x\n",
         "    \"\"\"\n",
         "    # Write your solution here\n",
-        "    return ...\n",
+        "    x = np.asarray(x)\n",
+        "    Q = np.asarray(Q)\n",
+        "    q = np.asarray(q)\n",
+        "    return Q @ x + q\n",
         "\n",
         "def grad_quadconj(mu,Q,q):\n",
         "    \"\"\"\n",
@@ -639,7 +741,10 @@
         "    :return: gradient of the conjugate of (1/2)x'Qx + q'x, evaluated at mu\n",
         "    \"\"\"\n",
         "    # Write your solution here\n",
-        "    return ...\n",
+        "    mu = np.asarray(mu)\n",
+        "    Q = np.asarray(Q)\n",
+        "    q = np.asarray(q)\n",
+        "    return np.linalg.solve(Q, mu - q)\n",
         "\n",
         "def prox_box(x,a,b,gamma):\n",
         "    \"\"\"\n",
@@ -654,7 +759,10 @@
         "    box contraint [a,b], evaluated at x\n",
         "    \"\"\"\n",
         "    # Write your solution here\n",
-        "    return ...\n",
+        "    x = np.asarray(x)\n",
+        "    a = np.asarray(a)\n",
+        "    b = np.asarray(b)\n",
+        "    return np.minimum(np.maximum(x, a), b)\n",
         "\n",
         "def prox_boxconj(mu,a,b,gamma):\n",
         "    \"\"\"\n",
@@ -668,8 +776,13 @@
         "    :return: proximal operator of the conjugate function of the indicator function of the\n",
         "    box contraint [a,b], evaluated at mu\n",
         "    \"\"\"\n",
-        "    # Write your solution here\n",
-        "    return ...\n",
+        "    mu = np.asarray(mu)\n",
+        "    a = np.asarray(a)\n",
+        "    b = np.asarray(b)\n",
+        "    lower = gamma * a\n",
+        "    upper = gamma * b\n",
+        "    proj = np.minimum(np.maximum(mu, lower), upper)\n",
+        "    return mu - proj\n",
         "\n",
         "def dual_to_primal(mu,Q,q,a,b):\n",
         "    \"\"\"\n",
@@ -684,7 +797,10 @@
         "    :return: the extracted primal variable\n",
         "    \"\"\"\n",
         "    # Write your solution here\n",
-        "    return ..."
+        "    mu = np.asarray(mu)\n",
+        "    Q = np.asarray(Q)\n",
+        "    q = np.asarray(q)\n",
+        "    return -np.linalg.solve(Q, mu + q)"
       ]
     },
     {
@@ -709,7 +825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "qrofzhpPv1zs"
       },
@@ -743,7 +859,9 @@
         "\n",
         "__Solution:__\n",
         "\n",
-        "_Fill in your solution here!_"
+        "$$\n",
+        "\\gamma = \\frac{1}{\\beta}\n",
+        "$$"
       ]
     },
     {
@@ -753,9 +871,7 @@
         "id": "nJknQQEvv1zt"
       },
       "outputs": [],
-      "source": [
-        "# Write your solution here"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
