使用 Colab 创建而成

--- a/handin1_(1).ipynb
+++ b/handin1_(1).ipynb
@@ -1203,7 +1203,17 @@
         "\n",
         "__Solution:__\n",
         "\n",
-        "_Fill in your solution here!_"
+        "\\textbf{Short answer:}  \n",
+        "Yes. Every iterate $x^k$ is in $S$.\n",
+        "\n",
+        "The reason is that the PG update:\n",
+        "$$\n",
+        "x^{k+1} = \\operatorname{prox}_{\\gamma \\iota_S}(x^k - \\gamma \\nabla f(x^k)) = \\Pi_S(x^k - \\gamma(Qx^k + q)),\n",
+        "$$\n",
+        "and the projection $\\Pi_S : \\mathbb{R}^n \\to S$ always returns a point in $S$.\n",
+        "\n",
+        "Thus, regardless of where $x^k - \\gamma \\nabla f(x^k)$ lies, the next iterate is feasible. So all iterates (including $x^0$) are in $S$.\n",
+        "\n"
       ]
     },
     {
@@ -1229,18 +1239,9 @@
         "\n",
         "__Solution:__\n",
         "\n",
-        "_Fill in your solution here!_"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "whEtHRnXv1zt"
-      },
-      "outputs": [],
-      "source": [
-        "# Write your solution here\n"
+        "$\n",
+        "\\eta = \\frac{1}{\\beta^*}\n",
+        "$\n"
       ]
     },
     {
@@ -1269,13 +1270,93 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [],
       "metadata": {
-        "id": "PypsTxq7v1zt"
+        "id": "sJUz2pmxEIvW"
       },
-      "outputs": [],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PypsTxq7v1zt",
+        "outputId": "78131a5f-5120-4ce2-ec22-c7db7b229642"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "||x_final - hat_x_final||_2 = 9.167e-11\n",
+            "max_i |x_final_i - hat_x_final_i| = 4.708e-11\n",
+            "x_final feasible? True (max violation 0.00e+00)\n",
+            "hat_x_final feasible? True (max violation 1.11e-11)\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your solution here"
+        "# Write your solution here\n",
+        "# ---- Dual PG solver (minimization form) ----\n",
+        "#   min_mu  F(mu) + G(mu)\n",
+        "#   F(mu) = 0.5 (mu+q)^T Q^{-1} (mu+q)   ->  ∇F(mu) = Q^{-1}(mu+q)\n",
+        "#   G(mu) = σ_S(mu) = i_S^*(mu)          ->  prox_{ηG}(y) = y - Π_[ηa, ηb](y)\n",
+        "def dual_pg_solve(Q, q, a, b, mu0=None, eta=None, max_iters=20000, tol=1e-12):\n",
+        "    n = q.size\n",
+        "    mu = np.zeros(n) if mu0 is None else np.asarray(mu0).copy()\n",
+        "\n",
+        "    # Safe step: η = λ_min(Q)  (since β* = ||Q^{-1}|| = 1/λ_min(Q) and we need 0<η<2/β*)\n",
+        "    lam = np.linalg.eigvalsh(Q)\n",
+        "    lam_min = lam.min()\n",
+        "    if eta is None:\n",
+        "        eta = lam_min\n",
+        "\n",
+        "    residuals = []\n",
+        "    for k in range(max_iters):\n",
+        "        # gradient step on F\n",
+        "        y = mu - eta * np.linalg.solve(Q, mu + q)   # Q^{-1}(mu+q)\n",
+        "        # prox of σ_S\n",
+        "        mu_next = prox_boxconj(y, a, b, eta)\n",
+        "        r = np.linalg.norm(mu_next - mu)\n",
+        "        residuals.append(r)\n",
+        "        mu = mu_next\n",
+        "        if r < tol:\n",
+        "            break\n",
+        "    return mu, np.array(residuals), eta\n",
+        "\n",
+        "# ---- Solve primal with PG to get x_final ----\n",
+        "beta  = np.linalg.eigvalsh(Q).max()\n",
+        "gamma = 1.0 / beta\n",
+        "x0 = np.zeros_like(q)\n",
+        "x_final, res_p, _ = pg_solve(Q, q, a, b, x0, gamma, max_iters=20000, tol=1e-12)\n",
+        "\n",
+        "# ---- Solve dual with PG to get mu_final, then recover hat_x_final ----\n",
+        "mu0 = np.zeros_like(q)\n",
+        "mu_final, res_d, eta_used = dual_pg_solve(Q, q, a, b, mu0=mu0, eta=None, max_iters=20000, tol=1e-12)\n",
+        "hat_x_final = dual_to_primal(mu_final, Q, q, a, b)  # = -Q^{-1}(mu+q)\n",
+        "\n",
+        "# ---- Compare the two primal points ----\n",
+        "diff_norm = np.linalg.norm(x_final - hat_x_final)\n",
+        "max_abs_diff = np.max(np.abs(x_final - hat_x_final))\n",
+        "print(f\"||x_final - hat_x_final||_2 = {diff_norm:.3e}\")\n",
+        "print(f\"max_i |x_final_i - hat_x_final_i| = {max_abs_diff:.3e}\")\n",
+        "\n",
+        "# sanity checks (feasibility and KKT sign pattern)\n",
+        "def feasibility_report(x, a, b, tol=1e-10):\n",
+        "    under = np.maximum(a - x, 0.0)\n",
+        "    over  = np.maximum(x - b, 0.0)\n",
+        "    max_viol = max(under.max(initial=0.0), over.max(initial=0.0))\n",
+        "    return bool(max_viol <= tol), float(max_viol)\n",
+        "\n",
+        "ok_x, viol_x = feasibility_report(x_final, a, b)\n",
+        "ok_hat, viol_hat = feasibility_report(hat_x_final, a, b)\n",
+        "print(f\"x_final feasible? {ok_x} (max violation {viol_x:.2e})\")\n",
+        "print(f\"hat_x_final feasible? {ok_hat} (max violation {viol_hat:.2e})\")\n",
+        "\n"
       ]
     },
     {
@@ -1302,13 +1383,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "n4hEgjS7v1zt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n4hEgjS7v1zt",
+        "outputId": "2ccaf432-42fd-4194-af46-b6e13ce28ba0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "in S? True  |  max_under=0.000e+00, max_over=0.000e+00\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your solution here"
+        "# Write your solution here\n",
+        "\n",
+        "beta  = np.linalg.eigvalsh(Q).max()\n",
+        "gamma = 1.0 / beta\n",
+        "x0 = 5*np.random.default_rng(0).standard_normal(q.size)\n",
+        "x_final, _, _ = pg_solve(Q, q, a, b, x0, gamma, max_iters=20000, tol=1e-12)\n",
+        "\n",
+        "# Feasibility check: is x_final ∈ [a, b] (within tolerance)?\n",
+        "tol = 1e-12\n",
+        "under = np.maximum(a - x_final, 0.0)   # violations below a\n",
+        "over  = np.maximum(x_final - b, 0.0)   # violations above b\n",
+        "in_S = (under.max() <= tol) and (over.max() <= tol)\n",
+        "\n",
+        "print(f\"in S? {in_S}  |  max_under={under.max():.3e}, max_over={over.max():.3e}\")"
       ]
     },
     {
@@ -1330,7 +1436,11 @@
         "\n",
         "__Solution:__\n",
         "\n",
-        "_Fill in your solution here!_"
+        "No.\n",
+        "\n",
+        "The extracted primal iterates $\\hat{x}^k = -Q^{-1}(\\mu^k + q)$ from the dual iterates need not lie in the box $S$ before convergence.\n",
+        "\n",
+        "Only at optimality ($\\mu^\\star$) do we have $\\mu^\\star \\in N_S(x^\\star)$, which enforces $x^\\star \\in S$. Along the way, $\\mu^k$ typically doesn’t satisfy the normal-cone condition, so $\\hat{x}^k$ can violate the bounds.\n"
       ]
     },
     {
@@ -1363,7 +1473,25 @@
         "\n",
         "__Solution:__\n",
         "\n",
-        "_Fill in your solution here!_"
+        "\n",
+        "For the primal points extracted from the dual iterates\n",
+        "$$\n",
+        "\\hat{x}^k = -Q^{-1}(\\mu^k + q),\n",
+        "$$\n",
+        "the sequence $f(\\hat{x}^k)$ is not guaranteed to be monotone (it may oscillate), because $\\hat{x}^k$ need not be feasible until convergence. However, as $\\mu^k \\to \\mu^\\star$ linearly, $\\hat{x}^k \\to x^\\star$ linearly too, and the function values converge to $f(x^\\star)$.\n",
+        "\n",
+        "For a quadratic,\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\lambda_{\\min}(Q)}{2} \\|\\hat{x}^k - x^\\star\\|^2\n",
+        "\\leq f(\\hat{x}^k) - f(x^\\star)\n",
+        "\\leq \\frac{\\lambda_{\\max}(Q)}{2} \\|\\hat{x}^k - x^\\star\\|^2,\n",
+        "$$\n",
+        "\n",
+        "so if $\\|\\hat{x}^k - x^\\star\\| \\leq C \\rho^k$ (with $\\rho < 1$ from the dual PG step-size), then\n",
+        "$$\n",
+        "f(\\hat{x}^k) - f(x^\\star) = \\mathcal{O}(\\rho^{2k})\n",
+        "$$\n"
       ]
     },
     {
@@ -1396,7 +1524,22 @@
         "\n",
         "__Solution:__\n",
         "\n",
-        "_Fill in your solution here!_"
+        "\n",
+        "For the primal points extracted from the dual iterates,\n",
+        "$$\n",
+        "\\hat{x}^k = -Q^{-1}(\\mu^k + q),\n",
+        "$$\n",
+        "we generally do not have $\\hat{x}^k \\in S$ before convergence. Therefore,\n",
+        "$$\n",
+        "f(\\hat{x}^k) + \\iota_S(\\hat{x}^k) =\n",
+        "\\begin{cases}\n",
+        "f(\\hat{x}^k), & \\text{if } \\hat{x}^k \\in S, \\\\\n",
+        "+\\infty, & \\text{otherwise},\n",
+        "\\end{cases}\n",
+        "$$\n",
+        "so the composite value is typically $+\\infty$ for most iterations and only becomes finite and then tends to $f(x^\\star)$) when $\\hat{x}^k$ enters the box.\n",
+        "\n",
+        "There is no monotonicity guarantee for this extended-real sequence.\n"
       ]
     },
     {
