使用 Colab 创建而成

--- a/handin1_final_1018.ipynb
+++ b/handin1_final_1018.ipynb
@@ -283,31 +283,32 @@
         "\n",
         "__Solution:__\n",
         "\n",
-        "Using the Fenchel template\n",
+        "Primal:\n",
         "$$\n",
-        "\\min_x f(x) + g(x) \\Longleftrightarrow \\max_y \\left( -f^*(-y) - g^*(y) \\right),\n",
-        "$$\n",
-        "with $g = \\iota_S$, which needs the explicit conjugates:\n",
-        "\n",
-        "$f^*(y) = \\frac{1}{2}(y - q)^\\top Q^{-1}(y - q)$ (since $Q \\succ 0$).\n",
-        "\n",
-        "$\n",
-        "\\iota_S^*(y) = \\sigma_S(y) = \\sum_{i=1}^n \\max\\{a_i y_i, b_i y_i\\}.\n",
-        "$\n",
-        "\n",
-        "Therefore the dual problem is\n",
-        "$$\n",
-        "\\max_{y \\in \\mathbb{R}^n} -\\frac{1}{2}(y + q)^\\top Q^{-1}(y + q) - \\sum_{i=1}^n \\max\\{a_i y_i, b_i y_i\\}.\n",
+        "\\min_{x \\in \\mathbb{R}^n} f(x) + \\iota_S(x), \\qquad f(x) = \\frac{1}{2} x^\\top Q x + q^\\top x, \\qquad S = \\{ x : a \\leq x \\leq b \\}.\n",
         "$$\n",
         "\n",
-        "A convenient case-free expression for the support term is\n",
+        "For a problem $\\min_x f(x) + g(x)$, the Fenchel dual is\n",
         "$$\n",
-        "\\sum_{i=1}^n \\max\\{a_i y_i, b_i y_i\\} = \\sum_{i=1}^n \\left( \\frac{a_i + b_i}{2} y_i + \\frac{b_i - a_i}{2} |y_i| \\right).\n",
+        "\\max_{u \\in \\mathbb{R}^n} (-f^*(-u) - g^*(u))\n",
         "$$\n",
         "\n",
-        "A standard Fenchel–Rockafellar CQ on the dual pair is\n",
+        "Here $g = \\iota_S$. From Task 2 we have\n",
         "$$\n",
-        "\\operatorname{ri}(\\operatorname{dom} f^*) \\cap \\left( -\\operatorname{ri}(\\operatorname{dom} \\iota_S^*) \\right) \\neq \\emptyset.\n",
+        "f^*(y) = \\frac{1}{2} (y - q)^\\top Q^{-1} (y - q), \\qquad \\iota_S^*(u) = \\sigma_S(u) = b^\\top u_+ + a^\\top u_-,\n",
+        "$$\n",
+        "with $u_+ = \\max(u, 0)$, $u_- = \\min(u, 0)$ elementwise.\n",
+        "\n",
+        "Plugging in $y = -u$ for $f^*(-u)$:\n",
+        "$$\n",
+        "f^*(-u) = \\frac{1}{2} (-u - q)^\\top Q^{-1} (-u - q) = \\frac{1}{2} (u + q)^\\top Q^{-1} (u + q).\n",
+        "$$\n",
+        "\n",
+        "Dual problem (explicit):\n",
+        "$$\n",
+        "\\boxed{\n",
+        "\\max_{u \\in \\mathbb{R}^n} -\\frac{1}{2} (u + q)^\\top Q^{-1} (u + q) \\; - \\; \\left( b^\\top u_+ + a^\\top u_- \\right).\n",
+        "}\n",
         "$$\n",
         "\n",
         "Here,\n",
